# hft-extensions

./: .gitignore  Cargo.toml
src/: analyticmarketdepth.rs  lib.rs  tools.rs
src/depth/: analyticmarketdepth.rs  mod.rs  side_depth.rs
src/maker_position_advisor/: mock_trade_tracker.rs  mod.rs  profit_counter.rs
src/mock_trader_tracker/: mod.rs
src/models/: advisor.rs  analyticmarketdepth.rs  distance_model.rs  jump_model.rs  mock_trader.rs  mod.rs  profit_recorder.rs
